@@ -8,19 +8,19 @@
   	<dependency>
 		<groupId>org.seleniumhq.selenium</groupId>
 		<artifactId>selenium-java</artifactId>
-		<version>LATEST</version>
+		<version>2.52.0</version>
 	</dependency>
 
 	<dependency>
 		<groupId>org.seleniumhq.selenium</groupId>
 		<artifactId>selenium-remote-driver</artifactId>
-		<version>LATEST</version>
+		<version>2.52.0</version>
 	</dependency>
 
 	<dependency>
 		<groupId>org.testng</groupId>
 		<artifactId>testng</artifactId>
-		<version>LATEST</version>
+		<version>6.8.8</version>
 	</dependency>
   
 	<dependency>
@@ -46,19 +46,44 @@
   </dependencies>
   
   <build>
-    <sourceDirectory>src</sourceDirectory>
+  <!-- 新版本maven配合这个标签使用指定代码目录 -->
+	<testSourceDirectory>src</testSourceDirectory> 
+		<resources>
+			<resource>
+				<directory>src</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+  
+  
     <plugins>
       <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-      			<!--定义maven运行测试生成的报表路径 -->
-				<reportsDirectory>./result/test-report</reportsDirectory>
         </configuration>
       </plugin>
      
+     <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.18.1</version>
+		<configuration>
+			<!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
+			<argLine>-Dfile.encoding=UTF-8</argLine>
+			<!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
+			<argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
+			<forkCount>0</forkCount>
+			<suiteXmlFiles>
+				<suiteXmlFile>testng.xml</suiteXmlFile>
+			</suiteXmlFiles>
+			<!--定义maven运行测试生成的报表路径 -->
+			<reportsDirectory>./result/test-report</reportsDirectory>
+		</configuration>
+	</plugin> 
     </plugins>
   </build>
 </project>
